add set-up process in the readme.md

--- a/masterpiece.css
+++ b/masterpiece.css
@@ -62,7 +62,7 @@ html{
     margin-right: 5%;
     padding-right: 18px;
     padding-left: 18px;
-    color: black
+    color: white
   }
   .label {
       border-radius: 50px;
