--- a/masterpiece.css
+++ b/masterpiece.css
@@ -57,12 +57,12 @@ html{
     background-image:url('./assets/BackG1.jpg');
     background-repeat:no-repeat;
     background-size: cover;
-    opacity: 0.9;
+    opacity: 1;
     margin-left: 5%;
     margin-right: 5%;
     padding-right: 18px;
     padding-left: 18px;
-    color: white
+    color: black;
   }
   .label {
       border-radius: 50px;
