--- a/masterpiece.css
+++ b/masterpiece.css
@@ -45,9 +45,9 @@ html{
     color: black;
     font-size: 20px;
   }
-  .d-flex {
-      display: flex ! important;
 
+  .text {
+    color: white;
   }
   #message {
     color: white;
