--- a/masterpiece.css
+++ b/masterpiece.css
@@ -9,29 +9,33 @@ html{
   }
   nav{
     font-size: 20px;
-    color: black;
+    color: white;
   }
   .nav-links {
       left: 200px;
+  }
+  nav #collapsibleNavbar {
+    position: absolute;
+    right: 100px;
   }
   #intro {
       position: relative;
       color: yellow;
   }
   h1{
-    font-size: 3rem;
+    font-size: 4rem;
     color: yellow;
     text-shadow: 10px 10px black;
     margin-top: 150px;
     top: 150px;
   }
   h5{
-    font-size: 20px;
+    font-size: 30px;
     color: white;
     bottom: 40px;
   }
   .btn{
-    font-size: 20px;
+    font-size: 30px;
     color: yellow;
   }
   .about {
@@ -105,6 +109,7 @@ html{
     height:50px;
     color: white; 
     text-align: center;
+    margin-top: 10px;
 
 
   }
