--- a/masterpiece.css
+++ b/masterpiece.css
@@ -1,149 +1,154 @@
 @import url('https://fonts.googleapis.com/css2?family=Rochester&display=swap');
-html{
-    scroll-behavior: smooth;
-   
-  }
-  body{
-    background-color: black;
-    font-family: 'Rochester', cursive;
-  }
-  nav{
-    font-size: 20px;
-    color: white;
-  }
-  .nav-links {
-      left: 200px;
-  }
-  nav #collapsibleNavbar {
-    position: absolute;
-    right: 100px;
-  }
-  #intro {
-      position: relative;
-      color: yellow;
-  }
-  h1{
-    font-size: 4rem;
-    color: yellow;
-    text-shadow: 10px 10px black;
-    margin-top: 150px;
-    top: 150px;
-  }
-  h5{
-    font-size: 30px;
-    color: white;
-    bottom: 40px;
-  }
-  .btn{
-    font-size: 30px;
-    color: yellow;
-  }
-  .about {
-    background-color: yellow;
-    color: black;
-  }
-  h3{
-    font-size: 40px;
-  }
-  p{
-    color: black;
-    font-size: 20px;
-  }
 
-  .text {
-    color: white;
-  }
-  #message {
-    color: white;
-  }
-  .order-layout{
-    background-color:yellow;
-    background-image:url('./assets/BackG1.jpg');
-    background-repeat:no-repeat;
-    background-size: cover;
-    opacity: 1;
-    margin-left: 5%;
-    margin-right: 5%;
-    padding-right: 18px;
-    padding-left: 18px;
-    color: black;
-  }
-  .label {
-      border-radius: 50px;
-  }
-  .overlay{
-    background-color: white;
-    color: yellow;
-    border-radius: 50%;
-    
-  }
-  h2{
-    color: white;
-    text-align: center;
-  }
-  .table {
-      color: white;
-  }
-  .contacts{
-    background-color: yellow;
-    /* margin-bottom: 5%; */
-    padding-bottom: 18px;
-    width: 100%;
-    height: 100%;
-    
-  }
-  .social-media {
-      margin-right: 20px;
-      font-size: 2rem;
-      color: black;
+body {
+  background-color: black;
+  font-family: 'Rochester', cursive;
+}
 
+nav {
+  font-size: 20px;
+  color: white;
+}
 
-  }
-  .contact-info {
-      position: relative;
-      left: 100px;
-  }
- 
-  .footer{
-    font-size: 20px;
-    height:50px;
-    color: white; 
-    text-align: center;
-    margin-top: 10px;
+.nav-links {
+  left: 200px;
+}
 
+nav #collapsibleNavbar {
+  position: absolute;
+  right: 100px;
+}
 
+#intro {
+  position: relative;
+  color: yellow;
+}
+
+h1 {
+  font-size: 4rem;
+  color: yellow;
+  text-shadow: 10px 10px black;
+  margin-top: 150px;
+  top: 150px;
+}
+
+h5 {
+  font-size: 30px;
+  color: white;
+  bottom: 40px;
+}
+
+.btn {
+  font-size: 30px;
+  color: yellow;
+}
+
+.about {
+  background-color: yellow;
+  color: black;
+}
+
+h3 {
+  font-size: 40px;
+}
+
+p {
+  color: black;
+  font-size: 20px;
+}
+
+.text {
+  color: white;
+}
+
+#message {
+  color: white;
+}
+
+.order-layout {
+  background-color: yellow;
+  background-image: url('./assets/BackG1.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+  opacity: 1;
+  margin-left: 5%;
+  margin-right: 5%;
+  padding-right: 18px;
+  padding-left: 18px;
+  color: black;
+}
+
+.label {
+  border-radius: 50px;
+}
+
+.overlay {
+  background-color: white;
+  color: yellow;
+  border-radius: 50%;
+}
+
+h2 {
+  color: white;
+  text-align: center;
+}
+
+.table {
+  color: white;
+}
+
+.contacts {
+  background-color: yellow;
+  /* margin-bottom: 5%; */
+  padding-bottom: 18px;
+  width: 100%;
+  height: 100%;
+}
+
+.social-media {
+  margin-right: 20px;
+  font-size: 2rem;
+  color: black;
+}
+
+.contact-info {
+  position: relative;
+  left: 100px;
+}
+
+.footer {
+  font-size: 20px;
+  height: 50px;
+  color: white;
+  text-align: center;
+  margin-top: 10px;
+}
+
+#checkout {
+  background-color: yellow;
+  margin-left: 5%;
+  margin-right: 5%;
+  padding-right: 18px;
+  padding-left: 18px;
+}
+
+/** Media Queries start **/
+
+@media (max-width: 740px) {
+  html, body, header, .view {
+    height: 1000px;
+    overflow-x: hidden;
   }
-  #checkout{
-    background-color: yellow;
-    margin-left: 5%;
-    margin-right: 5%;
-    padding-right: 18px;
-    padding-left: 18px;
+}
+
+@media (min-width: 800px) and (max-width: 850px) {
+  html, body, header, .view {
+    height: 650px;
   }
-  /** Media Queries start **/
-  
-  @media (max-width: 740px) {
-    html,
-    body,
-    header,
-    .view {
-        height: 1000px;
-        overflow-x: hidden;
-    }
+}
+
+@media (max-width: 991px) {
+  .navbar:not(.top-nav-collapse) {
+    background: #3f51b5 !important;
   }
-  
-  @media (min-width: 800px) and (max-width: 850px) {
-    html,
-    body,
-    header,
-    .view {
-        height: 650px;
-    }
-  }
-  
-  @media (max-width: 991px) {
-    .navbar:not(.top-nav-collapse) {
-        background: #3f51b5 !important;
-    }
-  
-  }
+}
